--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 <meta http-equiv="Content-Type" content="text/html;charset=utf.8"/>
  </head>
   <body>
- <hi>  zhushanshan1998 </hi>
- <hi>你好，朱姗姗！</hi>
+ <h1>  zhushanshan1998 </h1>
+ <h2>你好，朱姗姗！</h2>
   </body>
 </html>
