--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 ﻿<html>
    <head>
      <title>朱姗姗</title>
-<meta http-equiv="Content-Type" content="text/html;charset=utf.8"/>
+<meta http-equiv="Content-Type" content="text/html;charset=utf-8"/>
  </head>
   <body>
  <h1 align=center>  zhushanshan1998<br/></h1>
