--- a/index.html
+++ b/index.html
@@ -4,8 +4,8 @@
 <meta http-equiv="Content-Type" content="text/html;charset=utf-8"/>
  </head>
   <body>
- <h1 align=center>  zhushanshan1998<br/></h1>
- <h2>你好，朱姗姗！<br/></h2>
+ <h1 align=center>  zhushanshan1998</h1>
+ <h2>你好，朱姗姗！</h2>
  <h3 align=center>  欢迎光临  </h3>
   </body>
 </html>
