--- a/index.html
+++ b/index.html
@@ -1,12 +1,12 @@
 ﻿<html>
    <head>
-     <title>朱姗姗</title>
+     <title>朱姗姗的网页</title>
 <meta http-equiv="Content-Type" content="text/html;charset=utf-8"/>
  </head>
   <body>
  <h1 align=center>  zhushanshan1998</h1>
- <h2>你好，朱姗姗！</h2>
- <h3 align=center>  欢迎光临  </h3>
+ <h2>你好，我是朱姗姗！</h2>
+ <h3 align=center>  欢迎各位小仙女  </h3>
   </body>
 </html>
 <!DOCTYPE html>
