--- a/index.html
+++ b/index.html
@@ -90,13 +90,13 @@
      <div class="row">
   <div class="col-xs-6 col-md-3">
     <a href="#" class="thumbnail">
-      <img src="http://image.jxvdy.com/2015/0411/552882fe385eef3ccdd27_0.jpg" alt="...">
+      <img src="http://image.jxvdy.com/2015/0411/552882fe385eef3ccdd27_0.jpg" alt="杨幂">
     </a>
   </div>
   ...
 </div>
-<div class="row">
-  <div class="col-md-6">.col-md-6</div>
+<div class="杨幂">
+  <div class="col-md-6">.杨幂</div>
   <div class="col-md-6">.col-md-6</div>
 </div>
      
