--- a/index.html
+++ b/index.html
@@ -96,7 +96,7 @@
   ...
 </div>
 <div class="杨幂">
-  <div class="col-md-6">.杨幂</div>
+  <div class="杨幂">.col-md-6</div>
   <div class="col-md-6">.col-md-6</div>
 </div>
      
