--- a/index.html
+++ b/index.html
@@ -95,7 +95,7 @@
   </div>
   ...
 </div>
-<div class="杨幂">
+<div class="col-md-6">
   <div class="杨幂">.col-md-6</div>
   <div class="col-md-6">.col-md-6</div>
 </div>
