--- a/index.html
+++ b/index.html
@@ -90,7 +90,7 @@
      <div class="row">
   <div class="col-xs-6 col-md-3">
     <a href="#" class="thumbnail">
-      <img src="http://a3.qpic.cn/psb?/V12DNg2r11naPD/U2YwiY3FlYOAj4urSlrSz7Hl2ucGUhO7IYp7giKCtW4!/b/dG0BAAAAAAAA&bo=KgQgAwAAAAARADo!&rf=viewer_4" alt="杨幂">
+      <img src="http://a2.qpic.cn/psb?/V12DNg2r11naPD/CvlHGO0JM1I9BQHzKV25lY19qRJtkgd5yTCvcJaTseQ!/b/dGwBAAAAAAAA&bo=KgQgAwAAAAARADo!&rf=viewer_4" alt="杨幂">
     </a>
   </div>
   ...
