--- a/index.html
+++ b/index.html
@@ -96,8 +96,8 @@
   ...
 </div>
 <div class="row">
-  <div class="杨幂">.杨幂</div>
-  <div class="杨幂">.杨幂</div>
+  <div class="col-md-8">.col-md-8</div>
+  <div class="col-md-4">.col-md-4</div>
 </div>
      
      
