--- a/index.html
+++ b/index.html
@@ -94,6 +94,27 @@
     </a>
   </div>
   ...
+        <div class="row">
+  <div class="col-xs-6 col-md-3">
+    <a href="#" class="thumbnail">
+      <img src="http://a2.qpic.cn/psb?/V12DNg2r11naPD/CvlHGO0JM1I9BQHzKV25lY19qRJtkgd5yTCvcJaTseQ!/b/dGwBAAAAAAAA&bo=KgQgAwAAAAARADo!&rf=viewer_4" alt="杨幂">
+    </a>
+  </div>
+  ...
+            <div class="row">
+  <div class="col-xs-6 col-md-3">
+    <a href="#" class="thumbnail">
+      <img src="http://a2.qpic.cn/psb?/V12DNg2r11naPD/CvlHGO0JM1I9BQHzKV25lY19qRJtkgd5yTCvcJaTseQ!/b/dGwBAAAAAAAA&bo=KgQgAwAAAAARADo!&rf=viewer_4" alt="杨幂">
+    </a>
+  </div>
+  ...
+                <div class="row">
+  <div class="col-xs-6 col-md-3">
+    <a href="#" class="thumbnail">
+      <img src="http://a2.qpic.cn/psb?/V12DNg2r11naPD/CvlHGO0JM1I9BQHzKV25lY19qRJtkgd5yTCvcJaTseQ!/b/dGwBAAAAAAAA&bo=KgQgAwAAAAARADo!&rf=viewer_4" alt="杨幂">
+    </a>
+  </div>
+  ...
 </div>
 <div class="row">
   <div class="col-md-8">.col-md-8</div>
