--- a/index.html
+++ b/index.html
@@ -111,8 +111,18 @@
       <img src="http://a2.qpic.cn/psb?/V12DNg2r11naPD/X6.V2YZP7ofIaUqTeInPfOrgLiAOxevypzJk3Upnyys!/b/dDwBAAAAAAAA&bo=KgQgAwAAAAARADo!&rf=viewer_4" alt="杨幂">
     </a>
   </div>
-</div>
-<div class="row">
+                <div class="row">
+  <div class="col-xs-6 col-md-3">
+    <a href="#" class="thumbnail">
+      <img src="  <div class="row">
+  <div class="col-xs-6 col-md-3">
+    <a href="#" class="thumbnail">
+      <img src="http://a2.qpic.cn/psb?/V12DNg2r11naPD/X6.V2YZP7ofIaUqTeInPfOrgLiAOxevypzJk3Upnyys!/b/dDwBAAAAAAAA&bo=KgQgAwAAAAARADo!&rf=viewer_4" alt="杨幂">
+    </a>
+  </div>" alt="杨幂">
+    </a>
+  </div>     
+                   
   <div class="col-md-8">.col-md-8</div>
   <div class="col-md-4">.col-md-4</div>
 </div>
