--- a/index.html
+++ b/index.html
@@ -5,8 +5,7 @@
  </head>
   <body>
  <h1 align=center>  zhushanshan1998</h1>
- <h2>你好，我是朱姗姗！</h2>
- <h3 align=center>  欢迎各位小仙女  </h3>
+ <h2>你好，我是朱姗姗！<br/>我在夏令营，来和我一起玩吧！</h2>
   </body>
 </html>
 <!DOCTYPE html>
@@ -49,18 +48,18 @@
     <!-- Collect the nav links, forms, and other content for toggling -->
     <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
       <ul class="nav navbar-nav">
-        <li class="active"><a href="#">Link <span class="sr-only">(current)</span></a></li>
-        <li><a href="#">Link</a></li>
-        <li class="dropdown">
+        <li class="active"><a href="#">:-D <span class="sr-only">(current)</span></a></li>
+        <li><a href="#">:）</a></li>
+        <li class="啦啦啦">
           <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">Dropdown <span class="caret"></span></a>
           <ul class="dropdown-menu">
-            <li><a href="#">Action</a></li>
-            <li><a href="#">Another action</a></li>
-            <li><a href="#">Something else here</a></li>
+            <li><a href="#">o(≧v≦)o~~好棒</a></li>
+            <li><a href="#">(*^◎^*)</a></li>
+            <li><a href="#">哼(ˉ(∞)ˉ)唧</a></li>
             <li role="separator" class="divider"></li>
-            <li><a href="#">Separated link</a></li>
+            <li><a href="#">其他</a></li>
             <li role="separator" class="divider"></li>
-            <li><a href="#">One more separated link</a></li>
+            <li><a href="#">还有些什么？</a></li>
           </ul>
         </li>
       </ul>
@@ -71,15 +70,15 @@
         <button type="submit" class="btn btn-default">Submit</button>
       </form>
       <ul class="nav navbar-nav navbar-right">
-        <li><a href="#">Link</a></li>
+        <li><a href="#">我的团队</a></li>
         <li class="dropdown">
           <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">Dropdown <span class="caret"></span></a>
           <ul class="dropdown-menu">
-            <li><a href="#">Action</a></li>
-            <li><a href="#">Another action</a></li>
-            <li><a href="#">Something else here</a></li>
+            <li><a href="#">姚文喆</a></li>
+            <li><a href="#">朱姗姗</a></li>
+            <li><a href="#">姜辉</a></li>
             <li role="separator" class="divider"></li>
-            <li><a href="#">Separated link</a></li>
+            <li><a href="#">马亚娜</a></li>
           </ul>
         </li>
       </ul>
