--- a/index.html
+++ b/index.html
@@ -50,7 +50,7 @@
       <ul class="nav navbar-nav">
         <li class="active"><a href="#">:-D <span class="sr-only">(current)</span></a></li>
         <li><a href="#">:）</a></li>
-        <li class="啦啦啦">
+        <li class="dropdown">
           <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">Dropdown <span class="caret"></span></a>
           <ul class="dropdown-menu">
             <li><a href="#">o(≧v≦)o~~好棒</a></li>
@@ -72,13 +72,14 @@
       <ul class="nav navbar-nav navbar-right">
         <li><a href="#">我的团队</a></li>
         <li class="dropdown">
-          <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">Dropdown <span class="caret"></span></a>
+          <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">马亚娜 <span class="caret"></span></a>
           <ul class="dropdown-menu">
+              <li><a href="#">马亚娜</a></li>
+             <li role="separator" class="divider"></li>
             <li><a href="#">姚文喆</a></li>
             <li><a href="#">朱姗姗</a></li>
             <li><a href="#">姜辉</a></li>
-            <li role="separator" class="divider"></li>
-            <li><a href="#">马亚娜</a></li>
+
           </ul>
         </li>
       </ul>
