--- a/index.html
+++ b/index.html
@@ -48,20 +48,9 @@
     <!-- Collect the nav links, forms, and other content for toggling -->
     <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
       <ul class="nav navbar-nav">
-        <li class="active"><a href="#">:-D <span class="sr-only">(current)</span></a></li>
-        <li><a href="#">:）</a></li>
-        <li class="dropdown">
-          <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">Dropdown <span class="caret"></span></a>
-          <ul class="dropdown-menu">
-            <li><a href="#">o(≧v≦)o~~好棒</a></li>
-            <li><a href="#">(*^◎^*)</a></li>
-            <li><a href="#">哼(ˉ(∞)ˉ)唧</a></li>
-            <li role="separator" class="divider"></li>
-            <li><a href="#">其他</a></li>
-            <li role="separator" class="divider"></li>
-            <li><a href="#">还有些什么？</a></li>
-          </ul>
-        </li>
+        <li class="active"><a href="#">(*^◎^*) <span class="sr-only">(current)</span></a></li>
+        <li><a href="#">o(≧v≦)o~~好棒</a></li>
+         
       </ul>
       <form class="navbar-form navbar-left">
         <div class="form-group">
