--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 <meta http-equiv="Content-Type" content="text/html;charset=utf-8"/>
  </head>
   <body>
- <h1 align=center>  zhushanshan1998</h1>
+ <h1 align=center>夏令营活动</h1>
  <h2>你好，我是朱姗姗！<br/>我在夏令营，来和我一起玩吧！</h2>
   </body>
 </html>
@@ -53,10 +53,6 @@
          
       </ul>
       <form class="navbar-form navbar-left">
-        <div class="form-group">
-          <input type="text" class="form-control" placeholder="Search">
-        </div>
-        <button type="submit" class="btn btn-default">Submit</button>
       </form>
       <ul class="nav navbar-nav navbar-right">
         <li><a href="#">我的团队</a></li>
@@ -95,6 +91,51 @@
     </a>
   </div>
            
+  <div class="col-xs-6 col-md-3">
+    <a href="#" class="thumbnail">
+      <img src="http://a2.qpic.cn/psb?/V12DNg2r11naPD/OjC.fwNfuhRrTN6OYUb.NBaTOUhUfzWKJrfWimKPmiI!/b/dDwBAAAAAAAA&bo=KgQgAwAAAAARADo!&rf=viewer_4" alt="杨幂">
+    </a>
+  </div>           
+  <div class="col-xs-6 col-md-3">
+    <a href="#" class="thumbnail">
+      <img src="http://a2.qpic.cn/psb?/V12DNg2r11naPD/OjC.fwNfuhRrTN6OYUb.NBaTOUhUfzWKJrfWimKPmiI!/b/dDwBAAAAAAAA&bo=KgQgAwAAAAARADo!&rf=viewer_4" alt="杨幂">
+    </a>
+  </div>           
+  <div class="col-xs-6 col-md-3">
+    <a href="#" class="thumbnail">
+      <img src="http://a2.qpic.cn/psb?/V12DNg2r11naPD/OjC.fwNfuhRrTN6OYUb.NBaTOUhUfzWKJrfWimKPmiI!/b/dDwBAAAAAAAA&bo=KgQgAwAAAAARADo!&rf=viewer_4" alt="杨幂">
+    </a>
+  </div>           
+  <div class="col-xs-6 col-md-3">
+    <a href="#" class="thumbnail">
+      <img src="http://a2.qpic.cn/psb?/V12DNg2r11naPD/OjC.fwNfuhRrTN6OYUb.NBaTOUhUfzWKJrfWimKPmiI!/b/dDwBAAAAAAAA&bo=KgQgAwAAAAARADo!&rf=viewer_4" alt="杨幂">
+    </a>
+  </div>           
+  <div class="col-xs-6 col-md-3">
+    <a href="#" class="thumbnail">
+      <img src="http://a2.qpic.cn/psb?/V12DNg2r11naPD/OjC.fwNfuhRrTN6OYUb.NBaTOUhUfzWKJrfWimKPmiI!/b/dDwBAAAAAAAA&bo=KgQgAwAAAAARADo!&rf=viewer_4" alt="杨幂">
+    </a>
+  </div>           
+  <div class="col-xs-6 col-md-3">
+    <a href="#" class="thumbnail">
+      <img src="http://a2.qpic.cn/psb?/V12DNg2r11naPD/OjC.fwNfuhRrTN6OYUb.NBaTOUhUfzWKJrfWimKPmiI!/b/dDwBAAAAAAAA&bo=KgQgAwAAAAARADo!&rf=viewer_4" alt="杨幂">
+    </a>
+  </div>           
+  <div class="col-xs-6 col-md-3">
+    <a href="#" class="thumbnail">
+      <img src="http://a2.qpic.cn/psb?/V12DNg2r11naPD/OjC.fwNfuhRrTN6OYUb.NBaTOUhUfzWKJrfWimKPmiI!/b/dDwBAAAAAAAA&bo=KgQgAwAAAAARADo!&rf=viewer_4" alt="杨幂">
+    </a>
+  </div>           
+  <div class="col-xs-6 col-md-3">
+    <a href="#" class="thumbnail">
+      <img src="http://a2.qpic.cn/psb?/V12DNg2r11naPD/OjC.fwNfuhRrTN6OYUb.NBaTOUhUfzWKJrfWimKPmiI!/b/dDwBAAAAAAAA&bo=KgQgAwAAAAARADo!&rf=viewer_4" alt="杨幂">
+    </a>
+  </div>           
+  <div class="col-xs-6 col-md-3">
+    <a href="#" class="thumbnail">
+      <img src="http://a2.qpic.cn/psb?/V12DNg2r11naPD/OjC.fwNfuhRrTN6OYUb.NBaTOUhUfzWKJrfWimKPmiI!/b/dDwBAAAAAAAA&bo=KgQgAwAAAAARADo!&rf=viewer_4" alt="杨幂">
+    </a>
+  </div>           
   <div class="col-xs-6 col-md-3">
     <a href="#" class="thumbnail">
       <img src="http://a2.qpic.cn/psb?/V12DNg2r11naPD/OjC.fwNfuhRrTN6OYUb.NBaTOUhUfzWKJrfWimKPmiI!/b/dDwBAAAAAAAA&bo=KgQgAwAAAAARADo!&rf=viewer_4" alt="杨幂">
